--- a/scripts/apps/analytics/analytics-widget/configuration.html
+++ b/scripts/apps/analytics/analytics-widget/configuration.html
@@ -1,6 +1,6 @@
-<div ng-controller="AnalyticsCtrl as acc" ng-init="acc.setWidget(widget)">
+<div ng-controller="AggregateCtrl as acc" ng-init="acc.setWidget(widget)">
     <div ng-if="!acc.loading" ng-init="acc.edit()" class="wrapped"
-         sd-aggregate-settings
+         sd-analytics-settings
          data-desks="acc.desks"
          data-desk-stages="acc.deskStages"
          data-searches="acc.searches"
