--- a/scripts/apps/analytics/analytics-widget/analytics-widget.html
+++ b/scripts/apps/analytics/analytics-widget/analytics-widget.html
@@ -1,33 +1,37 @@
-<div class="widget-container" ng-controller="AnalyticsCtrl as acc" ng-init="acc.setWidget(widget)">
+<div class="widget-container" ng-controller="AggregateCtrl as acc" ng-init="acc.setWidget(widget)">
     <div class="main-list" 
         ng-class="{wrap: acc.selected && !$root.config.features.customMonitoringWidget, 'custom-widget': $root.config.features.customMonitoringWidget}">
-        <div class="search-box">
-            <input type="text" placeholder="{{ :: 'Search' | translate }}"
-                   ng-model="query"
-                   ng-model-options="{debounce: 500}"
-                   ng-change="acc.search(query)">
-        </div>
 
     </div>
+
+    <div class="content-list-holder">
+            <div sd-shadow>
+                <div class="content-list" ng-if="!acc.state.solo">
+                    <div class="desk" ng-repeat="group in acc.cards track by group._id">
+                        <div class="stage" ng-show="total">
+                            <div sd-stage-header></div>
+                            <div class="stage-content" ng-style="acc.getMaxHeightStyle(group.max_items)"
+                                 ng-show="acc.getExpandedState(group._id) || acc.state.solo"
+                                 sd-stage-items
+                                 data-stage="group"
+                                 data-total="total"
+                                 data-allowed="true"
+                                 data-show-empty="false"
+                                 data-max-items="group.max_items"
+                                 data-action="acc.preview(item)"
+                                 data-selected="acc.selected"
+                                 data-filter="group.query">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
     <div class="preview preview-widget" ng-init="contenttab = true" 
         ng-if="acc.selected"
         ng-class="{wrap: !acc.selected && !$root.config.features.customMonitoringWidget, 'custom-widget': $root.config.features.customMonitoringWidget}">
         <div class="nav">
             <button class="backlink" href="" ng-if="!$root.config.features.customMonitoringWidget" ng-click="acc.preview()"><span class="ng-scope" translate>Back</span></button>
-        </div>
-        <ul class="nav nav-tabs">
-            <li ng-class="{active: contenttab}">
-                <button ng-click="contenttab = true" translate>Content</button>
-            </li>
-            <li ng-class="{active: !contenttab}">
-                <button ng-click="contenttab = false" translate>Metadata</button>
-            </li>
-        </ul>
-        <div class="content-item-preview" ng-if="acc.selected">
-            <div class="content" ng-if="contenttab"
-                 sd-media-preview-widget data-item="acc.selected"></div>
-            <div ng-if="!contenttab"
-                 sd-media-metadata data-item="acc.selected"></div>
         </div>
     </div>
 </div>
